2011-12-23  Matt Burgess <matthew@linuxfromscratch.org>

   * lfs/init.d/mountvirtfs: Correct permissions on /run/shm

2011-11-28  DJ Lucas <dj@linuxfromscratch.org>

   * lfs/init.d/mountfs: Add '-t nosysfs' to umount command
   * lfs/init.d/mountvirtfs: remove unneeded spaces in output
   * lfs/init.d/rc: Correct double interactive prompt and set prompt defaults
   * lfs/init.d/setclock: Remove screen output from start case (udev)
   * lfs/init.d/udev{,_retry}:  Restore output to screen and log
   * lfs/sbin/ifup: Change "..." to ": " (not awaiting additonal output)

2011-11-14  Bruce Dubbs <bdubbs@linuxfromscratch.org>

   * The following are from suggestions by DJ Lucas
   ** General cleanup of scripts
   ** Move consolelog function to rc
   ** Clean up boot logging functions
   ** Fix interactive prompt between run level S and target run level

2011-10-06  Bryan Kadzban <bryan@linuxfromscratch.org>

   * Add configuration for udev_retry, and remove --type=failed (which does
     not work with recent udev versions anyway, since no events can possibly
     trigger it).  Start with just the "rtc" subsystem.  BLFS should eventually
     add "sound" to this file, and perhaps others.

2011-09-18
   * Review and update of changes made in previous change.
   ** Rename /etc/sysconfig/init_params to /etc/sysconfig/rc.site.
   ** Move network services to /lib/services.
   ** Move init-functions to /lib/lsb.
   *** /lib/lsb is a symlink to /lib/services.
   * Create convenience symlink /etc/init.d->/etc/rc.d/init.d.
   * Add help and man pages to upup/ifdown.
   * Append /run/var/bootlog to /var/log/boot.log at the end of 
     the boot sequence.
   * Add capabiltiy to step through the boot scripts at boot time
   * Optionally allow environment variables in sysconfig directory's 
     console, network, and clock files to be placed in rc.site.
   * Add an optional FASTBOOT parameter to set /fastboot when rebooting.

2011-07-14  Bruce Dubbs <bdubbs@linuxfromscratch.org>